Use the ir framework for the test